eZ Online Editor 5.0 extension Changelog

5.0.3
* Updated tinyMCE to 3.2.4.1
  (Merged from trunk Rev. 23)
* Change rewrite rules to support plain package
  (Merged from trunk Rev. 25)
* Fixed #14935: Small typo at design.ini.append.php
  (Merged from trunk Rev. 29)


5.0.2
* Fixed #14834: Commented 'SkinVariant' in ezoe.ini casues error in error.log.
* Updated TinyMCE to 3.2.3.1
* Fixed #14872: Embed tags cant always be edited
  (Merged from trunk Rev. 7)
* Fixed #14868: Allow adding inline custom / embed tags in header tags
  (Merged from trunk Rev. 9)
* Fixed #14873: Call to undefined method DOMText::getAttribute()
  (Merged from trunk Rev. 11)
* Changed order of outdent/indent buttons to be the same as other editors
  (Merged from trunk Rev. 17)

5.0.1
* Fixed translation of anchor Name attribute
* Implemented inline phpdoc for classes and functions
* Fixed translation of link link-type and view selections
* Implemented #14424: Improvements of list of link types
* Enable sub / sup / justify buttons by default and disable justify buttons on 4.0.x
* Pack javascript files used in dialogs to speed up the dialogs a bit
* Fixed bug #14649: IE inserts hostname when protocol is wrong
* Added jpn-JP translation
* Fixed bug #14670: Embed relations are not removed when embed tag is
  IMPORTANT: Apply update/database/5.0/dbupdate-5.0.0-to-5.0.1.sql to fix 
  inconsistency in database (if you have used ezoe prior to version 5.0.1)
* Updated Tango icons to v0.8.90
* Added support for IsInline[<tag>]=image setting for custom tags with no content (or actual images)
* Allow siteaccess to override ezoe.ini SkinVariant setting
* Fixed #14728: Space between links are removed
* Fixed: extra empty paragraphs generated when inserting embed object and literal tags
* Fixed #14799: Javascript error when adding an image that needs to be approved
* Updated tinyMCE to 3.2.3

5.0.0
* Fixed regression #13650: [header] ezoe adds a level each time it is called